--- a/contact.html
+++ b/contact.html
@@ -56,13 +56,13 @@
                                                 <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                                     <ul class="submenu">
                                                         <li><a href="works_details.html">work details</a></li>
-                                                        <li><a href="elements.html">elements</a></li>
+                                                        
                                                     </ul>
                                                 </li>
                                                 <li><a href="#">blog <i class="ti-angle-down"></i></a>
                                                     <ul class="submenu">
                                                         <li><a href="blog.html">blog</a></li>
-                                                        <li><a href="single-blog.html">single-blog</a></li>
+                                                        
                                                     </ul>
                                                 </li>
                                                 <li><a href="contact.html">Contact</a></li>
@@ -139,6 +139,7 @@
           <h2 class="contact-title">Get in Touch</h2>
         </div>
         <div class="col-lg-8">
+          <form method="POST" action="contact_process.php" id="contact-form"></form>
           <form class="form-contact contact_form" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
             <div class="row">
               <div class="col-12">
